--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Розклад ХЕТОП</string>
+    <string name="no_internet_access">Немає доступу до інтернет!</string>
 
     <string-array name="screen_array">
         <item>Список груп</item>
