--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Розклад ХЕТОП</string>
     <string name="no_internet_access">Немає доступу до інтернет!</string>
-    <string name="about_application">Lessons schedule for HETOP students \r\n Version 1.0</string>
+    <string name="about_application"> Розклад ХЕТОП \r\n \r\n Lessons schedule for HETOP students \r\n \r\n Version 1.0</string>
 
     <string-array name="screen_array">
         <item>Список груп</item>
@@ -16,7 +16,7 @@
         <item>11.20 - 12.40</item>
         <item>13.20 - 14.40</item>
         <item>14.50 - 16.10</item>
-        <item>16.30- 17.50</item>
+        <item>16.30 - 17.50</item>
         <item>18.00 - 19.20</item>
         <item>19.30 - 20.50</item>
     </string-array>
